--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <body>
     <!------ HEADER ----------------------------------------------------------------------------->
     <header class="header">
-      <div class="container header_container">
+      <div class="container header__container">
         <!---------- НАВІГАЦІЯ ---------------------------------------------------------------------->
         <nav class="main-nav">
           <!---------- ЛОГОТИП ------------------------------------------------------------------------>
-          <a class="main-nav__logo" href="./index.html" lang="en"
-            >Web<span class="main-nav__logo--color">Studio</span></a
+          <a class="logo" href="./index.html" lang="en"
+            >Web<span class="logo__darck">Studio</span></a
           >
           <ul class="site-nav">
             <li class="site-nav__item">
-              <a class="site-nav__link active" href="./index.html">Студия</a>
+              <a class="site-nav__link site-nav__link--active" href="./index.html">Студия</a>
             </li>
             <li class="site-nav__item">
               <a class="site-nav__link" href="./portfolio.html">Портфолио</a>
@@ -60,15 +60,15 @@
     <!-------- MAIN ------------------------------------------------------------------------------------->
     <main>
       <!-------- HERO ------------------------------------------------------------------------------------->
-      <section class="hero hero--img">
+      <section class="hero">
         <h1 class="hero__title">Эффективные решения <br />для вашего бизнеса</h1>
         <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
       </section>
       <!------ Особливості --------------------------------------------------------------------------------->
-      <section class="features section">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Внимание к деталям</h2>
-          <ul class="features__list">
+          <ul class="features">
             <li class="features__item">
               <div class="features__svg">
                 <svg width="70" height="70">
@@ -119,7 +119,7 @@
       <!------ Чим ми займаємося -------------------------------------------------------------------------->
       <section class="works section">
         <div class="container">
-          <h2 class="general-title">Чем мы занимаемся</h2>
+          <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="works__list">
             <li class="works__item">
               <div class="works__label">
@@ -150,7 +150,7 @@
       <!------- Наша команда --------------------------------------------------------------------------------->
       <section class="team section">
         <div class="container">
-          <h2 class="general-title">Наша команда</h2>
+          <h2 class="section__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
               <img
@@ -326,7 +326,7 @@
       <!-- Постоянные клиенты ----------------------------------------------------------------------------->
       <section class="clients section">
         <div class="container">
-          <h2 class="general-title">Постоянные клиенты</h2>
+          <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="clients__list">
             <li class="clients__item">
               <a class="clients__link" href="" target="_blank" rel="noreferrer noopener"
@@ -379,7 +379,7 @@
     <footer class="footer" id="__footer__">
       <div class="footer__container container">
         <div class="footer-left_box">
-          <a class="footer__logo" href="/">Web<span class="footer__logo--color">Studio</span></a>
+          <a class="footer-logo" href="/">Web<span class="footer-logo__white">Studio</span></a>
           <address class="footer__anddres">
             <ul class="footer__list">
               <li class="footer__item">
