--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,24 @@
       rel="stylesheet"
     />
     <!-- Підключаємо свої стилі -->
-    <link rel="stylesheet" type="text/css" href="./css/portfolio.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.min.css" />
   </head>
   <body>
     <!------ HEADER ----------------------------------------------------------------------------->
     <header class="header">
-      <div class="container header_container">
+      <div class="container header__container">
         <!---------- НАВІГАЦІЯ ---------------------------------------------------------------------->
         <nav class="main-nav">
           <!---------- ЛОГОТИП ------------------------------------------------------------------------>
-          <a class="main-nav__logo" href="./index.html" lang="en"
-            >Web<span class="main-nav__logo--color">Studio</span></a
+          <a class="logo" href="./index.html" lang="en"
+            >Web<span class="logo__darck">Studio</span></a
           >
           <ul class="site-nav">
             <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link active" href="./portfolio.html">Портфолио</a>
+              <a class="site-nav__link site-nav__link--active" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="site-nav__item">
               <a class="site-nav__link" href="#__footer__">Контакты</a>
@@ -274,7 +274,7 @@
     <footer class="footer" id="__footer__">
       <div class="footer__container container">
         <div class="footer-left_box">
-          <a class="footer__logo" href="/">Web<span class="footer__logo--color">Studio</span></a>
+          <a class="footer-logo" href="/">Web<span class="footer-logo__white">Studio</span></a>
           <address class="footer__anddres">
             <ul class="footer__list">
               <li class="footer__item">
